SERVER-60495 Retry FailedToSatisfyReadPreference in DDL coordinators